[package]
name = "webserver"
version = "0.1.0"
authors = ["Eslzzyl <eslzzyl@163.com>"]
edition = "2021"
description = "A toy webserver based on Rust"
repository = "https://github.com/Eslzzyl/webserver"
license = "MIT"
publish = false     # 这个程序过于简陋，不应被发布到crates.io

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.5.0"
bytes = "1.6.0"
chrono = "0.4.35"
flate2 = "1.0.28"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
lru = "0.16.3"
num_cpus = "1.16.0"
regex = "1.10.4"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.149"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
proptest = "1.4"
mockall = "0.12"

[[bench]]
name = "cache_benchmark"
harness = false

[[bench]]
name = "request_benchmark"
harness = false
